--- a/extension.toml
+++ b/extension.toml
@@ -4,4 +4,4 @@ version = "0.0.1"
 schema_version = 1
 authors = ["Rifai Nareswara"]
 description = "Nareswara Dark theme for Zed :)"
-repository = "https://github.com/rifainareswara/nareswara-dark-theme.git"
+repository = "https://github.com/rifainareswara/nareswara-dark-theme"
